--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV-Arseniy</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css">
 
 </head>
 
 <body>
-    git 
+   <header class="l-header" id="header">
+       <nav class="nav bd-container">
+           <a href="#" class="nav__logo">Arseniy Shabanov</a>
+           <div class="nav__menu" id="nav-menu">
+               <ul class="nav__list">
+                   <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                   <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+                   <li class="nav__item"><a href="#service" class="nav__link">Services</a></li>
+                   <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
+                   <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+
+               </ul>
+           </div>
+
+           <div class="nav__burger" id="nav-burger">
+               <i class="bx bx-menu"></i>
+           </div>
+       </nav>
+   </header>
     
 </body>
 
