--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                </ul>
            </div>
 
-           <div class="nav__burger" id="nav-burger">
+           <div class="nav__toggle" id="nav-toggle">
                <i class="bx bx-menu"></i>
            </div>
        </nav>
+       <script src="index.js"></script>
    </header>
     
 </body>
