feat: add burger menu

--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
     <title>CV Arseniy</title>
 </head>
 <body>
+
+    <a href="#" class="scrolltop show-scroll" id="scroll-top">
+        <i class="bx bx-chevron-up scrolltop__icon"></i>
+    </a>
+
     <header class="l-header" id="header">
         <nav class="nav bd-container">
             <a href="#" class="nav__logo">Arseniy Shabanov</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Homre</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="#sevices" class="nav__link">Sercice</a></li>
-                    <li class="nav__item"><a href="#portfolio" class="nav__link">Portfol</a></li>
+                    <li class="nav__item"><a href="#sevices" class="nav__link">Services</a></li>
+                    <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 </ul>
             </div>
@@ -26,6 +31,30 @@
             </div>
         </nav>
     </header>
+
+    <main class="l-main">
+        <section class="home" id="home">
+            <div class="home__container bd-container bd-grid">
+                <div class="home__data">
+                    <spam class="home__greeting">Hello, My name is</spam>
+                    <h1 class="home__name">Arseniy Shabanov</h1>
+                    <span class="home__profession">Web Developer</span>
+                    <a download="" href="#" class="button"></a>
+                </div>
+
+                <div class="home__social">
+                    <a href="#" class="home__social-icon"><i class="bx bxl-facebook-square"></i></a>
+                    <a href="#" class="home__social-icon"><i class="bx bxl-instagram"></i></a>
+                    <a href="#" class="home__social-icon"><i class="bx bxl-vk"></i></a>
+                </div>
+
+                <div class="home__img">
+                    <img src="/photo_2021-09-16_17-45-04.jpg" alt="myPhoto">
+                </div>
+
+            </div>
+        </section>
+    </main>
 
     <script src="main.js"></script>
 </body>
