--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="home__img">
-                    <img src="/photo_2021-09-16_17-45-04.jpg" alt="myPhoto">
+                    <img src="https://sun9-42.userapi.com/impg/Ehu40zXl6t0NkaM6qbBePoMQcqfL6nPvak10lQ/hIMfncyxWlE.jpg?size=959x1280&quality=95&sign=cfd2ca59efbce90d2995055e8fd3b506&type=album" alt="myPhoto">
                 </div>
 
             </div>
@@ -67,7 +67,7 @@
                     
 
                 </div>
-                <img src="/zur3h8ozPeU.jpg" alt="cv.md" class="about__img">
+                <img src="/assets/zur3h8ozPeU.jpg" alt="cv.md" class="about__img">
 
             </div>
         </section>
@@ -183,7 +183,7 @@
 
     <div class="portfolio__container">
         <div class="portfolio__content">
-            <a href="/zur3h8ozPeU.jpg"><img src="/zur3h8ozPeU.jpg" alt="" class="portfolio__img"></a>
+            <a href="/assets/zur3h8ozPeU.jpg"><img src="/assets/zur3h8ozPeU.jpg" alt="" class="portfolio__img"></a>
             <div class="portfolio__data">
                 <span class="portfolio__subtitle">Web development</span>
                 <h2 class="portfolio__title">CV Markdown</h2>
