feat: add new photo

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <h2 class="section-title">Aboute me</h2>
             <div class="about__container bd-grid">
                 <div class="about__data bd-grid">
-                    <p class="about__description"><span>Text about <br>My name is Arseniy, I'm 19 years old and an early stage front-end developer. I am studying in Minsk to become a interpreter, but apart from languages, I have also started to study programming, because I am interested in it, and knowledge of foreign languages will help me in this. I'm learning and discovering something new in web development every day.</span></p>
+                    <p class="about__description"><span>My name is Arseniy, I'm 19 years old and an early stage front-end developer. I am studying in Minsk to become a interpreter, but apart from languages, I have also started to study programming, because I am interested in it, and knowledge of foreign languages will help me in this. I'm learning and discovering something new in web development every day.</span></p>
                     
                     
 
                 </div>
-                <img src="/assets/zur3h8ozPeU.jpg" alt="cv.md" class="about__img">
+                <img src="https://psv4.userapi.com/c237331/u167034442/docs/d45/0114df38310e/zur3h8ozPeU.jpg?extra=VgZpr_XpuQS4oxoAWAuEA-11UjHOUukf6YOvGnrziCuldqRLX3XieovJw_BSOalQcv_cTGsarfSPe6Sk4ATZFv9wKjJLkryGl49z8oI1qROeFlzHKJ6jc2UYlzOHks1ABFOjlexePD8foWZGl8Uc2QrIL2U" alt="cv.md" class="about__img">
 
             </div>
         </section>
@@ -183,7 +183,7 @@
 
     <div class="portfolio__container">
         <div class="portfolio__content">
-            <a href="/assets/zur3h8ozPeU.jpg"><img src="/assets/zur3h8ozPeU.jpg" alt="" class="portfolio__img"></a>
+            <a href="https://psv4.userapi.com/c237331/u167034442/docs/d45/0114df38310e/zur3h8ozPeU.jpg?extra=VgZpr_XpuQS4oxoAWAuEA-11UjHOUukf6YOvGnrziCuldqRLX3XieovJw_BSOalQcv_cTGsarfSPe6Sk4ATZFv9wKjJLkryGl49z8oI1qROeFlzHKJ6jc2UYlzOHks1ABFOjlexePD8foWZGl8Uc2QrIL2U"><img src="https://psv4.userapi.com/c237331/u167034442/docs/d45/0114df38310e/zur3h8ozPeU.jpg?extra=VgZpr_XpuQS4oxoAWAuEA-11UjHOUukf6YOvGnrziCuldqRLX3XieovJw_BSOalQcv_cTGsarfSPe6Sk4ATZFv9wKjJLkryGl49z8oI1qROeFlzHKJ6jc2UYlzOHks1ABFOjlexePD8foWZGl8Uc2QrIL2U" alt="" class="portfolio__img"></a>
             <div class="portfolio__data">
                 <span class="portfolio__subtitle">Web development</span>
                 <h2 class="portfolio__title">CV Markdown</h2>
