feat: change parametrs photo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     
 
                 </div>
-                <img src="https://psv4.userapi.com/c237331/u167034442/docs/d45/0114df38310e/zur3h8ozPeU.jpg?extra=VgZpr_XpuQS4oxoAWAuEA-11UjHOUukf6YOvGnrziCuldqRLX3XieovJw_BSOalQcv_cTGsarfSPe6Sk4ATZFv9wKjJLkryGl49z8oI1qROeFlzHKJ6jc2UYlzOHks1ABFOjlexePD8foWZGl8Uc2QrIL2U" alt="cv.md" class="about__img">
+                <img src="/assets/zur3h8ozPeU.jpg" alt="cv.md" class="about__img">
 
             </div>
         </section>
@@ -183,7 +183,7 @@
 
     <div class="portfolio__container">
         <div class="portfolio__content">
-            <a href="https://psv4.userapi.com/c237331/u167034442/docs/d45/0114df38310e/zur3h8ozPeU.jpg?extra=VgZpr_XpuQS4oxoAWAuEA-11UjHOUukf6YOvGnrziCuldqRLX3XieovJw_BSOalQcv_cTGsarfSPe6Sk4ATZFv9wKjJLkryGl49z8oI1qROeFlzHKJ6jc2UYlzOHks1ABFOjlexePD8foWZGl8Uc2QrIL2U"><img src="https://psv4.userapi.com/c237331/u167034442/docs/d45/0114df38310e/zur3h8ozPeU.jpg?extra=VgZpr_XpuQS4oxoAWAuEA-11UjHOUukf6YOvGnrziCuldqRLX3XieovJw_BSOalQcv_cTGsarfSPe6Sk4ATZFv9wKjJLkryGl49z8oI1qROeFlzHKJ6jc2UYlzOHks1ABFOjlexePD8foWZGl8Uc2QrIL2U" alt="" class="portfolio__img"></a>
+            <a href="#"><img src="/assets/zur3h8ozPeU.jpg" alt="" class="portfolio__img"></a>
             <div class="portfolio__data">
                 <span class="portfolio__subtitle">Web development</span>
                 <h2 class="portfolio__title">CV Markdown</h2>
