--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     
 
                 </div>
-                <img src="/assets/zur3h8ozPeU.jpg" alt="cv.md" class="about__img">
+                <img src="../assets/zur3h8ozPeU.jpg" alt="cv.md" class="about__img">
 
             </div>
         </section>
